Initial setup with profiler, twig, controller and route that returns empty template

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,17 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+# Logs and cache
+*.log
+
+# Node / Frontend
+/node_modules/
+/yarn-error.log
+/pnpm-lock.yaml
+/package-lock.json
+
+# Docker
+/.dockerignore
+/.idea/
+/.vscode/
