--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -8,10 +8,12 @@ services:
       - ./:/app
       - ./frankenphp/Caddyfile:/etc/frankenphp/Caddyfile:ro
       - ./frankenphp/conf.d/20-app.dev.ini:/usr/local/etc/php/app.conf.d/20-app.dev.ini:ro
+      - ./var:/app/var:cached
       # If you develop on Mac or Windows you can remove the vendor/ directory
       #  from the bind-mount for better performance by enabling the next line:
       #- /app/vendor
     environment:
+      COMPOSER_CACHE_DIR: /app/var/composer-cache
       FRANKENPHP_WORKER_CONFIG: watch
       MERCURE_EXTRA_DIRECTIVES: demo
       # See https://xdebug.org/docs/all_settings#mode
@@ -21,6 +23,7 @@ services:
       # Ensure that host.docker.internal is correctly defined on Linux
       - host.docker.internal:host-gateway
     tty: true
+    user: "${PUID:-1000}:${PGID:-1000}"
 
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
