--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@
 /.dockerignore
 /.idea/
 /.vscode/
+
+###> symfony/asset-mapper ###
+/public/assets/
+/assets/vendor/
+###< symfony/asset-mapper ###
