--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,34 @@
         "php": ">=8.4.11",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "babdev/pagerfanta-bundle": "^4.5",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.15",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.5",
+        "pagerfanta/doctrine-orm-adapter": "^4.7",
+        "pagerfanta/twig": "^4.7",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
+        "symfony/expression-language": "7.3.*",
         "symfony/flex": "^2.8.2",
         "symfony/form": "7.3.*",
         "symfony/framework-bundle": "7.3.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "7.3.*",
+        "symfony/security-csrf": "7.3.*",
+        "symfony/stimulus-bundle": "^2.30",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/ux-autocomplete": "^2.30",
         "symfony/ux-live-component": "^2.30",
+        "symfony/ux-turbo": "^2.30",
         "symfony/ux-twig-component": "^2.30",
         "symfony/validator": "7.3.*",
         "symfony/yaml": "7.3.*",
+        "symfonycasts/dynamic-forms": "^0.1.3",
         "symfonycasts/tailwind-bundle": "^0.11.1",
+        "tales-from-a-dev/flowbite-bundle": "^0.8.1",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
