--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/stimulus-bundle": "^2.30",
         "symfony/twig-bundle": "7.3.*",
         "symfony/ux-autocomplete": "^2.30",
+        "symfony/ux-icons": "^2.30",
         "symfony/ux-live-component": "^2.30",
         "symfony/ux-turbo": "^2.30",
         "symfony/ux-twig-component": "^2.30",
