--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "symfonycasts/dynamic-forms": "^0.1.3",
         "symfonycasts/tailwind-bundle": "^0.11.1",
         "tales-from-a-dev/flowbite-bundle": "^0.8.1",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.21",
+        "twig/intl-extra": "^3.21",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
