--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -8,11 +8,10 @@ services:
       - ./:/app
       - ./frankenphp/Caddyfile:/etc/frankenphp/Caddyfile:ro
       - ./frankenphp/conf.d/20-app.dev.ini:/usr/local/etc/php/app.conf.d/20-app.dev.ini:ro
-      - ./var:/app/var:cached
+      - php_var:/app/var
       # If you develop on Mac or Windows you can remove the vendor/ directory
       #  from the bind-mount for better performance by enabling the next line:
       #- /app/vendor
-      - ./var/tailwind:/app/var/tailwind
     environment:
       COMPOSER_CACHE_DIR: /app/var/composer-cache
       FRANKENPHP_WORKER_CONFIG: watch
@@ -24,7 +23,6 @@ services:
       # Ensure that host.docker.internal is correctly defined on Linux
       - host.docker.internal:host-gateway
     tty: true
-    user: "${PUID:-1000}:${PGID:-1000}"
 
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
@@ -34,3 +32,6 @@ services:
     ports:
       - "5432"
 ###< doctrine/doctrine-bundle ###
+
+volumes:
+  php_var:
