--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/runtime": "7.3.*",
         "symfony/security-csrf": "7.3.*",
         "symfony/stimulus-bundle": "^2.30",
+        "symfony/translation": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
         "symfony/ux-autocomplete": "^2.30",
         "symfony/ux-icons": "^2.30",
