--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,10 +1,8 @@
 project_id: $CROWDIN_PROJECT_ID
 api_token: $CROWDIN_PERSONAL_TOKEN
 base_path: .
-base_url: https://api.crowdin.com
-
-preserve_hierarchy: true
-
+base_url: 'https://api.crowdin.com'
+preserve_hierarchy: 1
 files:
   - source: /translations/**/*.en.xliff
   - translation: /%original_path%/%file_name%.%two_letters_code%.xliff
