Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -6,3 +6,5 @@ preserve_hierarchy: 1
 files:
   - source: /translations/**/*.en.xliff
   - translation: /%original_path%/%file_name%.%two_letters_code%.xliff
+  - source: /translations/*.en.xliff
+    translation: /translations/%file_name%.%two_letters_code%.xliff
